--- a/main.html
+++ b/main.html
@@ -4,9 +4,22 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>HTML feed back form</title>
 </head>
 
 <body>
+	<h1>Feedback Form</h1>
+
+	<form action="feedbackform.html" method="post">
+		<label for="name">Name: <input type="text" id="name" name="Name" minlength="3" maxlength="50"></label>
+		<br>
+		<label for="portfolio">Portfolio url: <input type="url" id="portfolio" name="portfolio" ></label>
+		<br>
+		<label for="favcolor">Favorite Color: <input type="color" id="favcolor" name="favcolor" ></label>
+		<br>
+		<label for="likeness">Likeness: <input type="range" id="likeness" name="likeness" min="1" max="100" step="20"></label>
+		<br>
+	</form>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
