--- a/main.html
+++ b/main.html
@@ -15,7 +15,8 @@
 		<br>
 		<label for="portfolio">Portfolio url: <input type="url" id="portfolio" name="portfolio" ></label>
 		<br>
-		<label for="favcolor">Favorite Color: <input type="color" id="favcolor" name="favcolor" ></label>
+		<label for="favcolor">Favorite Color:</label>
+			<input type="color" id="favcolor" name="favcolor" >
 		<br>
 		<label for="likeness">Likeness: <input type="range" id="likeness" name="likeness" min="1" max="100" step="20"></label>
 		<br>
