--- a/main.html
+++ b/main.html
@@ -16,7 +16,7 @@
 		<label for="portfolio">Portfolio url: <input type="url" id="portfolio" name="portfolio" ></label>
 		<br>
 		<label for="favcolor">Favorite Color:</label>
-			<input type="color" id="favcolor" name="favcolor" >
+			<input type="color" id="favColor" name="favcolor" >
 		<br>
 		<label for="likeness">Likeness: <input type="range" id="likeness" name="likeness" min="1" max="100" step="20"></label>
 		<br>
